# licitaciones-mp-web

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  PLAN.md  README.md  pyproject.toml  requirements.txt
.claude/: launch.json
.github/workflows/: ci.yml
apps/accounts/: models.py
apps/accounts/migrations/: 0001_initial.py
apps/catalogo/: admin.py  models.py
apps/catalogo/migrations/: 0001_initial.py
apps/gestion/: admin.py  apps.py  models.py  serializers.py  views.py
apps/gestion/migrations/: 0001_initial.py
apps/licitaciones/: admin.py  api_mp.py  apps.py  export.py  filters.py  ingesta.py  models.py  serializers.py  services.py  views.py
apps/licitaciones/management/commands/: enriquecer.py  (+2 more)
apps/licitaciones/migrations/: 0001_initial.py  0002_alter_evaluacionfiltro_evaluada_en.py
apps/ops/: admin.py  apps.py  models.py
apps/ops/migrations/: 0001_initial.py
apps/perfiles/: admin.py  apps.py  models.py  pivot_import.py
apps/perfiles/migrations/: 0001_initial.py  0002_alter_perfilfiltro_options_perfilfiltro_propietario.py  0003_asignar_busquedas_existentes.py
apps/portal/: apps.py  forms.py  urls.py  views.py
config/: urls.py
config/settings/: base.py  dev.py  prod.py
docs/: decisiones.md
domain/: __init__.py  matching.py  normalizacion.py
static/portal/: estilos.css
templates/: base.html
templates/portal/: busqueda_nueva.html  detalle.html  lista.html  reglas.html
templates/registration/: login.html
tests/: factories.py  test_api.py  test_busquedas.py  test_enriquecer.py  test_evaluar.py  test_export.py  test_importar_pivot.py  test_ingestar_bulk.py  test_matching.py  test_modelos.py  test_normalizacion.py  test_portal.py  test_smoke.py
(+1 files in other folders)
